--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "php": "^8.2",
         "mongodb/mongodb": "^1.20",
         "phpmailer/phpmailer": "^6.9",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "cloudinary/cloudinary_php": "^2.14"
     },
 
     "autoload": {
