--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,15 @@
 
     "autoload": {
         "psr-4": {
-            "App\\": ""
+            "App\\": "./"
         }
     },
     "autoload-test": {
         "psr-4": {
-            "Tests\\": "tests"
+            "Tests\\": "tests/"
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.4"
+        "phpunit/phpunit": "^11.5"
     }
 }
