--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "php": "^8.2",
+        "ext-mongodb": "*",
         "mongodb/mongodb": "^1.20",
         "phpmailer/phpmailer": "^6.9",
         "vlucas/phpdotenv": "^5.6",
